--- a/SpaDay/Views/Spa/Menu.cshtml
+++ b/SpaDay/Views/Spa/Menu.cshtml
@@ -10,17 +10,46 @@
 
 <h1>Fancy Spa</h1>
 <div id="clientProfile">
+
+    <h3>Client Profile</h3>
+    <p>@ViewBag.name</p>
+
 </div>
+
+
 <div id="servicesMenu">
 
     <h5>Facial Treatments</h5>
-    <p>Your //TODO: pass the skintype value in here// skin type is best suited to the follow facial types:</p>
+    <p>Your @ViewBag.skinType skin type is best suited to the follow facial types:</p>
     
     <ul>
-        //TODO: iterate through appropriate facial treatments
+        @ViewBag.facialType
+    </ul>
+
+    <ul>
+        @foreach (string facial in ViewBag.facials)
+        {
+            <li>@facial</li>
+        }
+
     </ul>
 
     <h5>Nail Services</h5>
-    // TODO: display a description for the nail service selected
+    <ul>
+        @if (ViewBag.manipedi == "manicure")
+        {
+            <li>Our manicure is a great way to spend 30 minutes of your day! We use shea butter hand cream and the finest gel polish.</li>
+        }
+        else if (ViewBag.manipedi == "pedicure")
+        {
+            <li>Relax for 45 minutes in pure luxury! Our massage chairs and experienced nail techs are here to get your feet in shape for sandal season!</li>
+        }
+        else if (ViewBag.manipedi == "both")
+        {
+            <li>Our manicure is a great way to spend 30 minutes of your day! We use shea butter hand cream and the finest gel polish.</li>
+            <li>Relax for 45 minutes in pure luxury! Our massage chairs and experienced nail techs are here to get your feet in shape for sandal season!</li>
+        }
+
+    </ul>
     
 </div>
